--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <span>Metros cuadrados </span>
                 <div class="d-flex">
                     <div class="me-4">
-                        <p>desde: </p><input min="0" id="desde"   class="form-control " type="number">
+                        <p>desde: </p><input min="0" id="desde" class="form-control " type="number">
                     </div>
                     <div>
                         <p> hasta:</p>
@@ -32,7 +32,7 @@
             </div>
         </section>
 
-        <button id ="button" class="btn btn-warning">Buscar</button>
+        <button id="button" class="btn btn-warning">Buscar</button>
     </nav>
 
     <section id="Propiedades">
@@ -40,7 +40,9 @@
 
         <div class="propiedades">
             <div class="propiedad">
-                <div class="img" style="background-image: url('https://resizer.glanacion.com/resizer/fhK-tSVag_8UGJjPMgWrspslPoU=/768x0/filters:quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/CUXVMXQE4JD5XIXX4X3PDZAVMY.jpg')"></div>
+                <div class="img"
+                    style="background-image: url('https://resizer.glanacion.com/resizer/fhK-tSVag_8UGJjPMgWrspslPoU=/768x0/filters:quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/CUXVMXQE4JD5XIXX4X3PDZAVMY.jpg')">
+                </div>
                 <section>
                     <h5>Mansión</h5>
                     <div class="d-flex justify-content-between">
