--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         </div>
     </section>
 
-    <script src="assets/js/index.js"></script>
+    <script src="assets/js/apoyodesafio.js"></script>
+    <script src="assets/js/calcular.js"></script>
 </body>
 
 </html>
