--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
         </section>
         <button id="button" class="btn btn-warning">Buscar</button>
     </nav>
-
+    
     <section id="Propiedades">
         <h4 class="py-3">Total: <span id="resultado">6</span></h4>
+        <p id="nhr"></p>
 
         <div class="propiedades">
             <div class="propiedad">
